<?xml version="1.0"?>
<package format="3">
  <name>ws_visualize</name>
  <version>0.1.1</version>
  <description>End-effector sampler with Pinocchio (DBB point cloud generator)</description>

  <maintainer email="monglee147@gmail.com">Yeonguk Kim</maintainer>
  <license>MIT</license>

  <!-- build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build dependencies -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>pinocchio</build_depend>

  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend> 

  <!-- exec (runtime) dependencies -->
  <exec_depend>eigen</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pinocchio</exec_depend>

  <!-- test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
